# certifiable-tools

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml  python-package-conda.yml
_examples/: README.md  mw_slam_10pose_r0.pkl  mw_slam_10pose_r1.pkl  test_prob_2.pkl  test_prob_3.pkl  test_prob_4.pkl  test_prob_5.pkl  test_prob_desc.md
_scripts/: compare_solvers.py  essential_matrix.py  mw_slam_reduction.py  plot_iters.py  rank_reduction.py  rot_loop_admm.py  wafr_problems.py
_test/: test_admm.py  test_cert_tools.py  test_cliques.py  test_eig_tools.py  test_eopt_qp.py  test_eopt_solvers.py  test_homqcqp.py  test_homqcqp_ineq.py  test_linalg_tools.py  test_prob_10G.pkl  test_prob_10Gc.pkl  test_prob_10L.pkl  test_prob_10Lc.pkl  test_prob_11G.pkl  test_prob_11Gc.pkl  test_prob_11L.pkl  test_prob_11Lc.pkl  test_prob_7.pkl  test_prob_8.pkl  test_prob_8c.pkl  test_prob_9.pkl  test_prob_desc.md  test_sdp_solvers.py  utils.py
cert_tools/: __init__.py  admm_clique.py  admm_solvers.py  base_clique.py  cert_tools.py  eig_tools.py  eopt_solvers.py  eopt_solvers_qp.py  fusion_solvers.py  fusion_tools.py  hom_qcqp.py  linalg_tools.py  rank_reduction.py  sdp_solvers.py  sparse_solvers.py  test_tools.py
cert_tools/problems/: rot_synch.py
