[metadata]
name = cert_tools
version = 0.0.4
authors = [
    {name = "Frederike Dümbgen", email = "frederike.dumbgen@utoronto.ca" },
    {name = "Connor Holmes", email = "connor.holmes@mail.utoronto.ca" }]
description = tools for certifiable optimization
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/utiasASRL/certifiable-tools.git"

[options]
packages = find:
install_requires = 
  casadi>=3.6  # used for BM interface to IPOPT
  cvxpy>=1.3
  matplotlib>=3.6
  mosek>=11
  numpy>=1.23
  scipy==1.9
  igraph # for aggregate sparsity definition
  chompack
  poly_matrix @ git+https://github.com/utiasASRL/poly_matrix.git@v0.3#egg=poly_matrix

[options.packages.find] # do not mistake _tests/ for a package directory
exclude=_test*

[flake8]
ignore = W292, W391, F541, F841, 
exclude = _notebooks/*, *.ipynb_checkpoints*
max-line-length = 99
